--- a/styles/style.css
+++ b/styles/style.css
@@ -122,7 +122,7 @@ h1 {color: #fafafa;}
 }
 
 .userHud {
-  display: flex;
+    display: flex;
 }
 
 .arena {
@@ -190,12 +190,16 @@ h1 {color: #fafafa;}
 
 /* Progress Bar styling */
 progress {
-  border-radius: 100px; 
+  border-radius: 0px; 
   width: 100%;
-  height: 10px;
+  height: 15px;
 }
-progress::-webkit-progress-bar {border-radius: 100px;}
+progress::-webkit-progress-bar {border-radius: 0px;}
 progress::-webkit-progress-value {
   background-color: green;
-  border-radius: 100px;
+  border-radius: 0px;
+}
+
+.hidden {
+  display: none;
 }
