--- a/styles/style.css
+++ b/styles/style.css
@@ -16,28 +16,7 @@ body {
 .p {
   font-family: 'silkscreen', sans-serif;
 }
-.header {
-  background-color: #1b1b1b;
-  height: 100px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: center;
-}
 
-.header p {
-  font-size: 18px;
-  color: #fff;
-  padding-bottom: 4px;
-}
-
-.header h2 {
-  font-family: "Acme", sans-serif;
-  font-size: 30px;
-  color: #f8b700;
-}
-h1 {color: #fafafa;}
 
 
 /* start game */
@@ -75,6 +54,31 @@ h1 {color: #fafafa;}
 /* start game */
 
 
+/* character select screen */
+.header {
+  background-color: #1b1b1b;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+}
+.header img {
+  margin-top: 10em;
+  margin-bottom: 2em;
+}
+.header p {
+  font-size: 18px;
+  color: #fff;
+  padding-bottom: 4px;
+}
+.header h2 {
+  font-family: "Acme", sans-serif;
+  font-size: 30px;
+  color: #f8b700;
+}
+h1 {color: #fafafa;}
 .interface {
   padding: 0;
   width: 100%;
@@ -82,28 +86,22 @@ h1 {color: #fafafa;}
   flex-wrap: wrap;
   justify-content: center;
   background-color: #1b1b1b;
+  margin-top: 12em;
 }
-
-.interface a {
-  display: flex;
-  flex-wrap: nowrap;
-}
-
 .interface img {
-  width: 120px;
-  height: 120px;
+  width: 90px;
+  height: 90px;
+  margin: 15px auto;
 }
-
 .img-avatar {
   width: 160px !important;
   height: 160px !important;
 }
-
 .interface div {
-  width: 220px;
+  /* width: 220px; */
   padding: 0 10px 0 20px;
+  text-align: center;
 }
-
 .interface a:hover div {
   background-color: #3c1d3d;
 }
@@ -114,13 +112,17 @@ h1 {color: #fafafa;}
   color: #f8b700;
   padding: 12px 0 4px;
 } */
-
-.interface p {
+.character-alias {
   font-family: 'silkscreen', sans-serif;
-  font-size: 12px;
-  color: #d5c8af;
-  line-height: 20px;
+  text-align: center;
+  font-size: 1.4rem;
+  text-decoration: none;
+  background: #ffffff;
+  color: #1b1b1b;
+  padding: 2px 20px;
 }
+/* character select screen */
+
 
 #btn--search {
   width: 50% !important;
