--- a/styles/style.css
+++ b/styles/style.css
@@ -11,12 +11,11 @@ img {
 
 body {
   background-color: #1b1b1b !important;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 .p {
   font-family: 'silkscreen', sans-serif;
 }
-
 
 
 /* start game */
@@ -50,6 +49,40 @@ body {
 .start-built {
   color: #ffffff;
   font-size: 1.2rem;
+}
+
+
+@media screen and (max-width: 1006px) {
+#startBattle {
+    width: 40%;
+}
+}
+
+@media screen and (max-width: 768px) {
+#startBattle {
+    width: 40%;
+}
+}
+
+@media screen and (max-width: 600px) {
+.start-container {
+    margin-top: 7em;
+}
+}
+
+@media screen and (max-width: 520px) {
+.start-container {
+    margin-top: 7em;
+}
+#startBattle {
+    width: 60%;
+}
+}
+
+@media screen and (max-width: 360px) {
+.start-built {
+    font-size: 1rem;
+}
 }
 /* start game */
 
@@ -105,21 +138,45 @@ h1 {color: #fafafa;}
 .interface a:hover div {
   background-color: #3c1d3d;
 }
-
 /* .interface h3 {
   font-family: "Acme", sans-serif;
   font-size: 22px;
   color: #f8b700;
   padding: 12px 0 4px;
 } */
+.main-heading {
+  color: #ffffff;
+}
 .character-alias {
   font-family: 'silkscreen', sans-serif;
   text-align: center;
-  font-size: 1.4rem;
+  font-size: 1.1rem;
   text-decoration: none;
   background: #ffffff;
   color: #1b1b1b;
   padding: 2px 20px;
+}
+
+
+@media screen and (max-width: 600px) {
+.col {
+    width: 50%; 
+}
+}
+
+@media screen and (max-width: 500px) {
+.interface div {
+    padding: 0 30px 0 30px;
+}
+.col {
+  width: 50% !important; 
+}
+}
+
+@media screen and (max-width: 400px) {
+  .interface div {
+      padding: 0 15px 0 15px;
+}
 }
 /* character select screen */
 
@@ -196,12 +253,6 @@ h1 {color: #fafafa;}
   display: flex;
   flex-wrap: nowrap;
 }
-
-.enemy img {
-  width: 120px;
-  height: 120px;
-}
-
 .enemy div {
   width: 220px;
   padding: 0 10px 0 20px;
@@ -247,4 +298,23 @@ progress::-webkit-progress-value {
 }
 #end-battle-final {
   display: none;
+}
+
+
+/* battle arena */
+.interface img {
+  width: 90px;
+  height: 90px;
+  margin: 15px auto;
+  position: fixed;
+  top: 5em;
+  right: 5em;
+}
+.enemy img {
+  width: 90px;
+  height: 90px;
+  margin: 15px auto;
+  position: fixed;
+  top: 14em;
+  left: 5em;
 }
