--- a/styles/style.css
+++ b/styles/style.css
@@ -260,6 +260,12 @@ img {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
 }
+#hud-logo {
+  cursor: auto;  
+}
+#hud-logo img {
+  width: 100px;
+}
 
 /* enemy styling */
 .enemy {
