--- a/styles/style.css
+++ b/styles/style.css
@@ -221,8 +221,11 @@ img {
 }
 
 @media screen and (max-width: 400px) {
-  .interface div {
-    padding: 0 15px 0 15px;
+.interface div {
+  padding: 0 15px 0 15px;
+}
+.header {
+  margin-top: 3em !important;
 }
 }
 
