--- a/styles/style.css
+++ b/styles/style.css
@@ -207,16 +207,16 @@ img {
 
 @media screen and (max-width: 600px) {
 .col {
-    width: 50%; 
+  width: 50%; 
 }
 .header img {
-  margin-top: 6em;
+  margin-top: 6em !important;
 }
 }
 
 @media screen and (max-width: 500px) {
 .interface div {
-    padding: 0 30px 0 30px;
+  padding: 0 30px 0 30px;
 }
 .col {
   width: 50% !important; 
